--- a/pages/api.html
+++ b/pages/api.html
@@ -31,7 +31,7 @@
                 </a>
               </h1>
               <ul>
-                  <li><a class="bround" href="login.html">Login</a></li>
+                  <li><a class="bround" href="/login">Login</a></li>
               </ul>
             </div>
           </div>
