--- a/pages/web-app.html
+++ b/pages/web-app.html
@@ -9,7 +9,11 @@
 
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:400,700' rel='stylesheet' type='text/css'>
     <link href="web-app/css/style.css" rel="stylesheet" type="text/css">
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,156 +22,12 @@
     <![endif]-->
   </head>
   <body>
-    <div class="wrap">
-      <div class="container">
-          <form action="">
-            <div class="form-group">
-              <input type="text" class="form-control search-box" placeholder="Search for influencers">
-            </div>
-            <div class="row">
-              <div class="col-xs-12 col-md-3">
-                <select class="form-control">
-                  <option>Location</option>
-                  <option>USA</option>
-                  <option>Philippines</option>
-                  <option>Russia</option>
-                  <option>Japan</option>
-                </select>
-              </div>
-              <div class="col-xs-12 col-md-3">
-                <select class="form-control">
-                  <option>Gender</option>
-                  <option>Male</option>
-                  <option>Female</option>
-                </select>
-              </div>
-              <div class="col-xs-12 col-md-3">
-                <select class="form-control">
-                  <option>Value</option>
-                  <option>$1000</option>
-                  <option>$10, 000</option>
-                  <option>$100, 000</option>
-                </select>
-              </div>
-            </div>
-          </form>
-          <div class="influenced-wrap">
-            <div class="row">
-              <div class="col-xs-6 col-sm-3">
-                <div class="influenced">
-                  <div class="i-image">
-                    <img src="images/github.png" alt="">
-                  </div>
-                  <span class="i-name">Github</span>
-                  <div class="i-details">
-                    <span>@github</span>
-                    <span><i class="fa fa-map"></i> San Fransisco</span>
-                  </div>
-                  <div class="i-value">
-                    <span class="value"><i class="indicator-value high"></i> $25,000</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xs-6 col-sm-3">
-                <div class="influenced">
-                  <div class="i-image">
-                    <img src="images/github.png" alt="">
-                  </div>
-                  <span class="i-name">Github</span>
-                  <div class="i-details">
-                    <span>@github</span>
-                    <span><i class="fa fa-map"></i> San Fransisco</span>
-                  </div>
-                  <div class="i-value">
-                    <span class="value"><i class="indicator-value high"></i> $25,000</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xs-6 col-sm-3">
-                <div class="influenced">
-                  <div class="i-image">
-                    <img src="images/github.png" alt="">
-                  </div>
-                  <span class="i-name">Github</span>
-                  <div class="i-details">
-                    <span>@github</span>
-                    <span><i class="fa fa-map"></i> San Fransisco</span>
-                  </div>
-                  <div class="i-value">
-                    <span class="value"><i class="indicator-value high"></i> $25,000</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xs-6 col-sm-3">
-                <div class="influenced">
-                  <div class="i-image">
-                    <img src="images/github.png" alt="">
-                  </div>
-                  <span class="i-name">Github</span>
-                  <div class="i-details">
-                    <span>@github</span>
-                    <span><i class="fa fa-map"></i> San Fransisco</span>
-                  </div>
-                  <div class="i-value">
-                    <span class="value"><i class="indicator-value high"></i> $25,000</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xs-6 col-sm-3">
-                <div class="influenced">
-                  <div class="i-image">
-                    <img src="images/github.png" alt="">
-                  </div>
-                  <span class="i-name">Github</span>
-                  <div class="i-details">
-                    <span>@github</span>
-                    <span><i class="fa fa-map"></i> San Fransisco</span>
-                  </div>
-                  <div class="i-value">
-                    <span class="value"><i class="indicator-value high"></i> $25,000</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xs-6 col-sm-3">
-                <div class="influenced">
-                  <div class="i-image">
-                    <img src="images/github.png" alt="">
-                  </div>
-                  <span class="i-name">Github</span>
-                  <div class="i-details">
-                    <span>@github</span>
-                    <span><i class="fa fa-map"></i> San Fransisco</span>
-                  </div>
-                  <div class="i-value">
-                    <span class="value"><i class="indicator-value high"></i> $25,000</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xs-6 col-sm-3">
-                <div class="influenced">
-                  <div class="i-image">
-                    <img src="images/github.png" alt="">
-                  </div>
-                  <span class="i-name">Github</span>
-                  <div class="i-details">
-                    <span>@github</span>
-                    <span><i class="fa fa-map"></i> San Fransisco</span>
-                  </div>
-                  <div class="i-value">
-                    <span class="value"><i class="indicator-value high"></i> $25,000</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-      </div>
-    </div>
-    <div id="app"></div>
-	<script src="web-app/client.min.js"></script>
+    <div id="root"></div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="web-app/js/bootstrap.min.js"></script>
+    <script type="text/babel" src="src/influencers.js" ></script>
   </body>
 </html>
 
