--- a/pages/signup.html
+++ b/pages/signup.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-60x60.png">
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Alpharank Login</title>
+    <title>Alpharank Signup</title>
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700|Merriweather" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.js"></script>
