--- a/pages/home.html
+++ b/pages/home.html
@@ -44,11 +44,10 @@
                         <li>Product Category</li>
                         <li>Timestamp</li>
                       </ul>
-                      <form class="f-upload-csv" action="/upload_process" name="upload-csv" method="post">
+                      <form class="f-upload-csv" action="/upload_process" enctype="multipart/form-data" name="upload-csv" method="post">
                         <div class="input-group form-submit">
-                          <input type="file" name="file" id="file" class="inputfile" />
+                          <input type="file" name="data-file" id="file" class="inputfile" onchange="this.form.submit()"/>
                           <label class="filename" for="file"><i class="fa fa-file-text"></i><span>Choose a file</span></label>
-                          <input type="submit" class="bround" name="upload-btn" id="upload-btn" value="UPLOAD" />
                         </div>
                       </form>
                     </div>
