--- a/pages/home.html
+++ b/pages/home.html
@@ -44,9 +44,9 @@
                         <li>Product Category</li>
                         <li>Timestamp</li>
                       </ul>
-                      <form class="f-upload-csv" action="/upload_process" enctype="multipart/form-data" name="upload-csv" method="post">
+                      <form class="f-upload-csv" action="/upload_process" enctype="multipart/form-data" name="data_file" method="post">
                         <div class="input-group form-submit">
-                          <input type="file" name="data-file" id="file" class="inputfile" onchange="this.form.submit()"/>
+                          <input type="file" name="data_file" id="file" class="inputfile" onchange="this.form.submit()"/>
                           <label class="filename" for="file"><i class="fa fa-file-text"></i><span>Choose a file</span></label>
                         </div>
                       </form>
