--- a/pages/data-processed.html
+++ b/pages/data-processed.html
@@ -26,7 +26,7 @@
           <div class="container">
             <div class="main-nav clearfix">
               <h1 class="logo-cont">
-                <a href="index.html">
+                <a href="/">
                     <img src="images/alpharank_logo_white.svg" width="218" height="25" alt="AlphaRank Logo">
                 </a>
               </h1>
