--- a/pages/verify-email.html
+++ b/pages/verify-email.html
@@ -44,6 +44,7 @@
           <div class="col-xs-12 col-lg-10 col-lg-offset-1">
             <h2>Welcome!</h2>
             <p class="wmessage">Thanks for joining AlphaRank! We've just sent you an email verification. Please check your email to verify it. Or click the button below.</p>
+            <p><a class="btn btn-green" href="#">Activate Account</a></p>
           </div>    
         </div>
       </div>
