--- a/pages/web-app.html
+++ b/pages/web-app.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <META NAME="robots" CONTENT="noindex">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Web App</title>
-
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:400,700' rel='stylesheet' type='text/css'>
-    <link href="web-app/css/style.css" rel="stylesheet" type="text/css">
+    <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-60x60.png">
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Web App</title>
+
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:400,700' rel='stylesheet' type='text/css'>
+    <link href="/web-app/css/style.css" rel="stylesheet" type="text/css">
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -22,12 +27,18 @@
     <![endif]-->
   </head>
   <body>
-    <div id="root"></div>
+    <div class="web-app">
+      <div class="wrap" id="social">
+       
+      </div>
+    </div>
+    
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="web-app/js/bootstrap.min.js"></script>
-    <script type="text/babel" src="src/influencers.js" ></script>
+    <script src="/web-app/js/bootstrap.min.js"></script>
+    <script type="text/babel" src="/src/influencers.js"></script>
   </body>
 </html>
 
